2006-11-15  Adam Roben  <aroben@apple.com>

        Build fix.

        * page/EventHandler.h:

2006-11-14  Beth Dakin  <bdakin@apple.com>

        Reviewed by Geoff.

        Move things off the bridge, and move sendContextMenuEvent() from 
        EventHandlerMac to EventHandler.

        * WebCore.exp:
        * WebCore.xcodeproj/project.pbxproj:
        * bridge/EditorClient.h:
        * bridge/mac/WebCoreFrameBridge.h:
        * editing/Editor.cpp:
        (WebCore::Editor::selectWordBeforeMenuEvent):
        (WebCore::Editor::clientIsEditable):
        * editing/Editor.h:
        * page/EventHandler.cpp:
        (WebCore::EventHandler::sendContextMenuEvent):
        * page/EventHandler.h:
        * page/mac/EventHandlerMac.mm:

2006-11-14  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Harrison.

        <rdar://problem/4766635> Safari should never follow links in editable areas (add a WebKitEditableLinkNeverLive option)

        Adds an EditableLinkNeverLive setting that will make links in editable areas always dead.

        * bridge/mac/WebCoreSettings.mm:
        (-[WebCoreSettings setEditableLinkBehavior:]):
        * html/HTMLAnchorElement.cpp:
        (WebCore::HTMLAnchorElement::defaultEventHandler):
        (WebCore::HTMLAnchorElement::setActive):
        (WebCore::HTMLAnchorElement::isLiveLink):
        * page/FrameView.cpp:
        (WebCore::selectCursor):
        * page/Settings.h:
        (WebCore::Settings::):

2006-11-14  Mark Rowe  <bdash@webkit.org>

        Reviewed by Oliver.

        Build fix

        * bindings/scripts/CodeGenerator.pm:

2006-11-14  Anders Carlsson  <acarlsson@apple.com>

        Turns out I wasn't forcing DWARF on the world at all, 
        it's now the default!

        * WebCore.xcodeproj/project.pbxproj:

2006-11-14  Anders Carlsson  <acarlsson@apple.com>

        I must stop trying to force DWARF on the world.
        
        * WebCore.xcodeproj/project.pbxproj:
